# qwen3-tts-tool

./: README.md  pyproject.toml
qwen3_tts_tool/: __init__.py  cli.py  engine.py  logging_config.py  models.py  voices.py
qwen3_tts_tool/commands/: __init__.py  info_commands.py  init_commands.py  synthesize_commands.py  voice_commands.py
tests/: test_engine.py  test_voices.py
