[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen3-tts-tool"
version = "0.1.0"
description = "A CLI that provides local text-to-speech using Qwen3-TTS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "english-learning-app" }]
keywords = ["cli", "tts", "qwen3", "text-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.7",
    "qwen-tts>=0.1.1",
    "torch>=2.4.0",
    "numpy>=1.26.0",
    "soundfile>=0.13.1",
    "sounddevice>=0.5.1",
    "huggingface_hub>=0.24.0",
    # Steer resolution away from ancient numba/llvmlite that cannot build on
    # Python 3.12 (pulled transitively via qwen-tts -> librosa -> numba).
    "numba>=0.60.0",
]

[project.scripts]
qwen3-tts-tool = "qwen3_tts_tool.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["qwen3_tts_tool"]
